2001-01-14  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* *.cpp: Removed .cpp files

2000-11-01  Al Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixed negotiation so it is now possible for packed to get picked.
	  (Packed decoder appears to segfault though)
	