@@ -1,12 +1,12 @@
-SUBDIRS = . Objects Message Codecs Filters Net Funky
+SUBDIRS = . Objects Message Codecs Net Funky
 
 lib_LTLIBRARIES = libAtlas.la
 
 libAtlasincludedir = $(includedir)/Atlas
 
 libAtlas_la_SOURCES = \
-	Bridge.cpp Filter.cpp Factory.cpp
+	Bridge.cc
 
 libAtlasinclude_HEADERS = \
-	Factory.h Bridge.h Codec.h Filter.h Negotiate.h EncoderBase.h \
+	Factory.h Bridge.h Codec.h Negotiate.h EncoderBase.h \
 	Task.h
