@@ -12,11 +12,14 @@ There will be two branches. Linux version numbering will be applied.
     * gcc 3.0 [or latest CVS]
  - fully ISO/IEC 14882:1998 (the C++ standard) compliant code
  - a 99.9% stable API
+ - no Filter support - there were various issues, and the API was too
+   unstable (note that Filters didn't really ever work anyways!)
 
 0.5.0: This is the playground. It shall contain:
  - Aloril's Objects/ changes
  - Changes to the API
  - All fixes made in 0.4.0
+ - Filter support
 0.5.0 will be developed from 0.4.0.
 
 0.6.0: This will be the next stable version, with a fully stable API,
