@@ -7,12 +7,9 @@ For 0.4.0:
  - finish tutorial/
  - write tests/
  - make all tests succeed
- - write filterbuf, which uses Filter to filter data passed to and from a
-   streambuf (maybe) (will have to look into this - maybe Filters
-   should be taken out of 0.4.0 completely and stabilised in 0.5.0)
  - make compilable on gcc 2.95.3
  - make compilable on gcc 3.0 (or current CVS)
  - make ISO/IEC 14882 conformant, with the exception of compiler
    kludges
  - make all template classes use format as documented in HACKING
-
+ - FIXMEs in src/Net/Stream.cc
