@@ -1,5 +1,9 @@
 2001-01-14  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
 
+	* src/: Removed Filter and Filters/ completely
+
+	* src/Net/Stream.cpp: Removed references to Filter
+
 	* *.cpp: Removed .cpp files
 
 2000-11-01  Al Riddoch  <ajr@ecs.soton.ac.uk>
